chandeliers-lus/tests/compile_fail/ui/tc/when-missing.stderr
error: Variable b is not available yet at this point of the typechecking.
 --> tests/compile_fail/ui/tc/when-missing.rs:3:27
  |
3 |     node foo(x : int when b) returns ();
  |                           ^
  |
  = note: During this incremental typechecking, you cannot access global
          variables and you may only use local variables that have been
          declared strictly beforehand, in the order of inputs then outputs
          then locals.
  = note: These are the variables that are already useable: (none declared)

error: Variable b is not available yet at this point of the typechecking.
 --> tests/compile_fail/ui/tc/when-missing.rs:8:27
  |
8 |     node foo(x : int when b) returns (b : bool);
  |                           ^
  |
  = note: During this incremental typechecking, you cannot access global
          variables and you may only use local variables that have been
          declared strictly beforehand, in the order of inputs then outputs
          then locals.
  = note: These are the variables that are already useable: (none declared)
